@@ -149,14 +149,14 @@
         made the to CM entry it represents.</para>   
       </section>
 
-	  <section id="compendium:cm:managed-service">
-	  	<title>Managed service</title>
+	  <section id="compendium:cm:managed-properties">
+	  	<title>Managed properties</title>
 	  	
 	  	<para>Based on a configuration admin entry, Spring DM can autowire by name, the properties of a given bean. To use this feature, define
-	  	a nested <literal>managed-service</literal> inside the bean definition:</para>
+	  	a nested <literal>managed-properties</literal> inside the bean definition:</para>
 	  	
 	  	<programlisting language="xml"><![CDATA[<bean id="managedComponent" class="MessageTank">
-   <osgix:managed-service persistent-id="com.xyz.messageservice"/> 
+   <osgix:managed-properties persistent-id="com.xyz.messageservice"/> 
 </bean>]]></programlisting>
 
 		<para>For each key in the dictionary stored by Configuration Admin under the given persistent id, 
@@ -175,7 +175,7 @@
 		property element declaration nested in the component element, then the value from Configuration Admin takes precedence:</para>
 		
 		<programlisting language="xml"><![CDATA[<bean id="managedComponent" class="MessageTank">
-   <osgix:managed-service persistent-id="com.xyz.messageservice"/>
+   <osgix:managed-properties persistent-id="com.xyz.messageservice"/>
    <property name="amount" value="100"/>
    <property name="threshold" value="500"/> 
 </bean>]]></programlisting>
@@ -184,15 +184,15 @@
 		Configuration Admin.</para>
 		
 		<warning>Do not share the same <emphasis>persistent-id</emphasis> (PID) between multiple bundles or definitions, as <emphasis>only one</emphasis>
-		of them will receive notifications. <literal>managed-service</literal> relies on <literal>org.osgi.service.cm.ManagedService</literal>
+		of them will receive notifications. <literal>managed-properties</literal> relies on <literal>org.osgi.service.cm.ManagedService</literal>
 		contract which mandates that each <literal>ManagedService</literal> instance must be identified with its own unique PID.
 		Please see the Configuration Admin spec, specifically section 104.3 and 104.5</warning>
 		
-		<section id="compendium:cm:managed-service:update">
+		<section id="compendium:cm:managed-properties:update">
 			<title>Configuration Admin Runtime Updates</title>
 			<para>A powerful feature of Configuration Admin is the ability to update (or delete) entries at runtime. That is, the configuration data 
 			stored in Configuration Admin may be updated after the bean has been created. By default, any post-creation updates will be ignored. However,
-			one can configure <literal>managed-service</literal> element to receive configuration updates through the <literal>update-strategy</literal>
+			one can configure <literal>managed-properties</literal> element to receive configuration updates through the <literal>update-strategy</literal>
 			attribute, which can have a value of either <literal>bean-managed</literal> or <literal>container-managed</literal>.</para>
 		
 			<para><literal>bean-managed</literal> strategy will pass all the updates made to the configuration to a callback present on the bean, specified
@@ -228,12 +228,12 @@ public class SelfManagedBean {
 		    <para>and configuraton:</para>
 		    
 		    <programlisting language="xml"><![CDATA[<bean id="containerManaged" class="ContainerManagedBean">
-   <osgix:managed-service persistent-id="labX" update-strategy="container-managed"/>
+   <osgix:managed-properties persistent-id="labX" update-strategy="container-managed"/>
    <property name="integer" value="23"/>
 </bean>
 	
 <bean id="beanManaged" class="SelfManagedBean">
-   <osgix:managed-service persistent-id="labY" update-strategy="bean-managed" update-method="updateCallback"/>
+   <osgix:managed-properties persistent-id="labY" update-strategy="bean-managed" update-method="updateCallback"/>
 </bean>]]></programlisting>
 
 		    <para>Any updates made to the CM entry <literal>labX</literal> will be automatically reinjected on existing instances of 
@@ -241,7 +241,7 @@ public class SelfManagedBean {
 		    method.</para>
 		    
 		    <para>The update options are summarized in the table below:</para>
-		    <table id="compendium-cm-managed-service-options" pgwide="1">
+		    <table id="compendium-cm-managed-properties-options" pgwide="1">
           		<title>Managed Properties Update Options</title>
           		<tgroup cols="3">
           		  <colspec colname="c1" colwidth="2*"/>
