@@ -1,0 +1,54 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:osgix="http://www.springframework.org/schema/osgi-compendium"
+	xmlns:util="http://www.springframework.org/schema/util"
+	xsi:schemaLocation="
+		http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd		
+		http://www.springframework.org/schema/osgi-compendium http://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd">
+
+
+	<!--  custom editors -->
+	<bean class="org.springframework.beans.factory.config.CustomEditorConfigurer">
+	  <property name="customEditors">
+	    <map>
+	      <entry key="org.springframework.osgi.iandt.cm.managedproperties.ExoticType">
+	        <bean class="org.springframework.osgi.iandt.cm.managedproperties.ExoticTypeCustomEditor">
+	          <property name="format" value="upperCase"/>
+	        </bean>
+	      </entry>
+	    </map>
+	  </property>
+	</bean>
+
+	<!-- osgix:managed-properties -->
+	<bean id="simple" class="org.springframework.osgi.iandt.cm.managedproperties.TestBean">
+		<osgix:managed-properties persistent-id="simple"/>
+		<property name="clazz" value="java.lang.System"/>
+		<property name="exoticType" value="aNameForExoticType"/>
+	</bean>
+	
+	<bean id="simplePrototype" class="org.springframework.osgi.iandt.cm.managedproperties.TestBean" scope="prototype">
+		<osgix:managed-properties persistent-id="simplePrototype" update-strategy="none"/>
+	</bean>
+	
+	<bean id="containerManaged" class="org.springframework.osgi.iandt.cm.managedproperties.TestBean">
+		<osgix:managed-properties persistent-id="containerManaged" update-strategy="container-managed"/>
+	</bean>
+	
+	<bean id="beanManaged" class="org.springframework.osgi.iandt.cm.managedproperties.TestBean">
+		<osgix:managed-properties persistent-id="beanManaged" update-strategy="bean-managed" update-method="update"/>
+		<property name="integer" value="23"/>
+	</bean>
+
+
+	<bean id="containerManagedWithInit" class="org.springframework.osgi.iandt.cm.managedproperties.TestBean" init-method="init">
+		<osgix:managed-properties persistent-id="containerManaged" update-strategy="container-managed"/>
+	</bean>
+
+	<bean id="beanManagedWithInit" class="org.springframework.osgi.iandt.cm.managedproperties.TestBean" init-method="init">
+		<osgix:managed-properties persistent-id="containerManaged" update-strategy="bean-managed" update-method="update"/>
+	</bean>
+	
+</beans>
